@@ -4,6 +4,8 @@ NOTE: This is the 1.3.X development branch.
 Put code changes right below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
+ - 22-Nov-09 bb Delete translations no longer in use.
+   Correct code for translation that was not being picked up by update_translaton.pl.
  - 01-Nov-09 bb Extract CSS and JavaScript from access.php
  - 01-Nov-09 bb Start moving CSS files to their own subdirectory. 
  - 30-Oct-09 bb I had changed things to v1.2.0 because that's what most files showed.
